# bazel-diff

./: .bazelignore  .bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  BUILD  CLA.txt  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  artifacts.bzl  bazel-diff-example.ps1  bazel-diff-example.sh  constants.bzl  coverage.json  dd  extensions.bzl  index.md  maven_install.json  repositories.bzl  workspace_status.sh
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.claude/skills/coverage-status/: SKILL.md
.claude/skills/improve-coverage/: SKILL.md
.github/actions/cla_assistant/: action.yml
.github/actions/cla_assistant/lib/: main.js
.github/workflows/: buildifier.yaml  cd.yaml  ci.yaml  cla.yaml  coverage_badge.yaml  firecracker-e2e.yml  format.yaml  integration.yaml  integration_external_target.yml  integration_gazelle.yml  integration_no_impacted_targets.yml  pr.yaml  publish.yaml  release.yaml  release_prep.sh  serve-harness.yml  serve-stress-alpine-real.yml  serve-stress-alpine.yml  serve-stress-real.yml  serve-stress.yml  upload_impacted_targets.yaml
.trunk/: trunk.yaml
cli/: BUILD
cli/format/: BUILD
cli/src/main/kotlin/com/bazel_diff/: Main.kt
cli/src/test/kotlin/com/bazel_diff/: Modules.kt
cli/src/test/resources/fixture/: bzlmod-cc-transitive-test-impacted-targets.txt  bzlmod-module-extension-test-impacted-targets.txt  bzlmod-transitive-test-cquery-impacted-targets.txt  bzlmod-transitive-test-impacted-targets.txt  cquery-test-android-code-change-android-impacted-targets.txt  cquery-test-android-code-change-jre-impacted-targets.txt  cquery-test-android-impacted-targets.txt  cquery-test-guava-upgrade-android-impacted-targets.txt  cquery-test-guava-upgrade-jre-impacted-targets.txt  cquery-test-jre-impacted-targets.txt  fine-grained-hash-bzlmod-cquery-test-impacted-targets.txt  fine-grained-hash-bzlmod-test-impacted-targets.txt  fine-grained-hash-external-repo-test-impacted-targets.txt  impacted_targets-1-2-rule-sourcefile.txt  impacted_targets-1-2.txt  impacted_targets_distances-1-2-rule-sourcefile.txt  impacted_targets_distances-1-2.txt
cli/src/test/resources/workspaces/always_affected_external/: BUILD  MODULE.bazel
cli/src/test/resources/workspaces/bzl_seed_overtrigger/: MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/bzlmod_local_repo/: .bazelignore  BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/bzlmod_transitive_external/: .bazelignore  BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/bzlmod_transitive_external/inner/: BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/bzlmod_transitive_external/outer/: BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/cquery_failing_target/: BUILD  MODULE.bazel  README.md  WORKSPACE  failing_rule.bzl
cli/src/test/resources/workspaces/cross_file_macro_rule/: MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/distance_metrics/: BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/go_mod_change/: BUILD  MODULE.bazel  WORKSPACE  go.mod  go.sum  lib.go  lib_test.go
cli/src/test/resources/workspaces/keep_going_repo_failure/: BUILD  MODULE.bazel  ext.bzl
cli/src/test/resources/workspaces/keep_going_repo_failure/bad/: BUILD
cli/src/test/resources/workspaces/keep_going_repo_failure/good/: BUILD
cli/src/test/resources/workspaces/macro_invalidation/: BUILD  MODULE.bazel  WORKSPACE  miniature.bzl
cli/src/test/resources/workspaces/manual_and_test_suite/: BUILD  MODULE.bazel  WORKSPACE  lib.sh  test.sh
cli/src/test/resources/workspaces/module_bazel_comment/: BUILD  MODULE.bazel  WORKSPACE  bin.sh
cli/src/test/resources/workspaces/package_group_dropped/: MODULE.bazel
cli/src/test/resources/workspaces/proto_external_version_bump/: .bazelignore  BUILD  Consumer.java  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/proto_external_version_bump/proto_dep/: BUILD  MODULE.bazel  WORKSPACE  greeting.proto
cli/src/test/resources/workspaces/wrapped_external_repo/: .bazelignore  BUILD  MODULE.bazel  WORKSPACE
cli/src/test/resources/workspaces/wrapped_external_repo/inner_repo/: BUILD  MODULE.bazel  WORKSPACE  data.txt
cli/src/test/resources/workspaces/wrapped_external_repo/middle_repo/: BUILD  MODULE.bazel  WORKSPACE
docs/: firecracker-snapshots.md
integration/: WORKSPACE  integration_test.sh  modified_filepaths.txt  update_final_hashes.rb
integration/test/java/com/integration/: BUILD  TestStringGenerator.java
proto/: BUILD  analysis_v2.proto  build.proto
src/main/java/com/bazel-diff/: BUILD  BazelClient.java  BazelRule.java  BazelSourceFileTarget.java  BazelTarget.java  Constants.java  GitClient.java  TargetHashingClient.java  VersionProvider.java  main.java
src/main/java/com/bazel_diff/: BUILD  BazelClient.java  BazelQueryException.java  BazelRule.java  BazelSourceFileTarget.java  BazelTarget.java  ByteBufferPool.java  Constants.java  Files.java  GitClient.java  TargetHashingClient.java  TargetType.java  VersionProvider.java  main.java
src/main/kotlin/com/bazel_diff/: BUILD  Main.kt
src/test/java/com/bazel_diff/: TargetHashingClientImplTests.java
test/java/com/bazel-diff/: BUILD  TargetHashingClientImplTests.java
test/java/com/bazel_diff/: BUILD  TargetHashingClientImplTests.java
test/kotlin/com/bazel_diff/: BUILD  BuildGraphHasherImplTests.kt
tools/: BUILD  coverage_check.py  coverage_check_test.py  generate_readme.py  readme_template.md  serve_harness.py  serve_stress.py  serve_stress_alpine.sh  serve_stress_test.py
tools/firecracker/: README.md  bazel.go  bazel_test.go  driver.go  driver_firecracker.go  driver_firecracker_test.go  driver_test.go  fc_integration_test.go  fcapi.go  fcapi_test.go  fingerprint.go  fingerprint_test.go  git.go  go.mod  main.go  main_test.go  resolve.go  resolve_test.go  store.go  store_test.go
tools/firecracker/bench/: Dockerfile  bench.py  build_guest_image.sh  gen_project.py  run_docker_bench.sh  run_in_container.sh  setup_tap.sh
tools/go/sample/: BUILD  sample.go  sample_test.go
(+150 files in other folders)
